less padding on mobile opp page to offset bug of no scroll

--- a/client/src/components/oppPage.css
+++ b/client/src/components/oppPage.css
@@ -118,6 +118,8 @@
    .OppPageWrapper{
        width: 100%;
        height: 100%;
+       padding-left: 2em;
+       padding-right: 2em;
    }
    .mobileGoBack{
     display: block;
